feat: Implement Mr. White's final guess mechanism with UI, logic, and game result storage.

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -45,7 +45,11 @@
         "confirmElimination": "Confirm Elimination",
         "eliminatePlayer": "Eliminate {{name}}?",
         "cancel": "Cancel",
-        "confirm": "Confirm"
+        "confirm": "Confirm",
+        "mrWhiteFound": "Mr. White Found!",
+        "mrWhiteGuessPrompt": "You have been discovered! You have one last chance: guess the civilian word to win instantly.",
+        "enterWordPlaceholder": "Enter the civilian word",
+        "submitGuess": "Take a guess"
     },
     "results": {
         "title": "Game Over",
