feat: Implement duplicate player name validation with UI error display and i18n support.

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -18,7 +18,8 @@
         "undercoverCount": "Undercover agents",
         "mrWhiteCount": "Mr. White",
         "startGame": "Start Game",
-        "removePlayer": "Remove player"
+        "removePlayer": "Remove player",
+        "duplicateName": "Name already taken!"
     },
     "players": {
         "title": "Players",
