feat: Implement multiplayer game setup and lobby functionality with a new lobby page and server-side game management.

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -4,8 +4,9 @@
     },
     "home": {
         "subtitle": "The ultimate social deduction game",
-        "newGame": "New Game",
-        "history": "Game History",
+        "newGame": "Local Game",
+        "playOnline": "Online Multiplayer",
+        "history": "History",
         "howToPlay": "How to Play"
     },
     "setup": {
