feat: Add unknown role translation to French and English locales.

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -86,6 +86,7 @@
     "roles": {
         "civilian": "Civilian",
         "undercover": "Undercover",
-        "mrWhite": "Mr. White"
+        "mrWhite": "Mr. White",
+        "unknown": "Unknown"
     }
 }
