feat: internationalize multiplayer setup page text and add corresponding translations for English and French.

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -3,79 +3,101 @@
         "title": "UNDERCOVER"
     },
     "home": {
-        "subtitle": "The ultimate social deduction game",
+        "subtitle": "The game that ruins friendships",
         "newGame": "Play",
         "playOnline": "Multiplayer",
-        "howToPlay": "How to play"
+        "howToPlay": "Rules (Concept)"
     },
     "setup": {
-        "title": "Game Setup",
-        "players": "Players",
-        "addPlayer": "Add Player",
-        "playerName": "Player name",
-        "minPlayers": "Minimum {{count}} players required",
-        "settings": "Settings",
-        "undercoverCount": "Undercover agents",
-        "mrWhiteCount": "Mr. White",
-        "startGame": "Start Game",
-        "removePlayer": "Remove player",
-        "duplicateName": "Name already taken!"
+        "title": "Plotting the Crime",
+        "players": "Participants",
+        "addPlayer": "Add a Victim",
+        "playerName": "Codename",
+        "minPlayers": "Need at least {{count}} liars to start",
+        "settings": "Conspiracy Settings",
+        "undercoverCount": "Impostors count",
+        "mrWhiteCount": "Mr. White count",
+        "startGame": "Let the Betrayal Begin!",
+        "removePlayer": "Kick this person",
+        "duplicateName": "Original... but taken!"
     },
     "players": {
-        "title": "Players",
-        "ready": "{{count}} players ready"
+        "title": "The Suspects",
+        "ready": "{{count}} liars ready"
     },
     "reveal": {
-        "passPhone": "Pass the device to",
+        "passPhone": "Hand device to",
         "iam": "I am",
-        "yourWord": "Your word",
-        "youAreMrWhite": "Mr. White",
-        "mrWhiteHint": "You don't know the word. Listen to others to guess it!",
-        "memorize": "Describe this word without saying it directly",
-        "nextPlayer": "Next Player",
-        "startDiscussion": "Start Game",
-        "getReady": "Get Ready!",
-        "yourRole": "Your role",
-        "identify": "Tap to reveal"
+        "yourWord": "Your Secret Word",
+        "youAreMrWhite": "You are Mr. White!",
+        "mrWhiteHint": "You have zero clue. Lie through your teeth!",
+        "memorize": "Memorize this and don't get caught",
+        "nextPlayer": "Next Victim!",
+        "startDiscussion": "Let the Lies Begin",
+        "getReady": "Shhh!",
+        "yourRole": "Your Identity",
+        "identify": "Tap to see your fate"
     },
     "game": {
-        "title": "Discussion",
+        "title": "Heated Debate",
         "round": "Round {{round}}",
-        "playersRemaining": "{{count}} players remaining",
-        "eliminated": "Eliminated",
-        "vote": "Vote",
-        "votingPhase": "Voting Phase",
-        "selectToEliminate": "Select a player to eliminate",
-        "confirmElimination": "Confirm Elimination",
-        "eliminatePlayer": "Eliminate {{name}}?",
-        "cancel": "Cancel",
-        "confirm": "Confirm",
-        "mrWhiteFound": "Mr. White Found!",
-        "mrWhiteGuessPrompt": "You have been discovered! You have one last chance: guess the civilian word to win instantly.",
-        "enterWordPlaceholder": "Enter the civilian word",
-        "submitGuess": "Take a guess"
+        "playersRemaining": "{{count}} survivors",
+        "eliminated": "Liquidated",
+        "vote": "Vote (Betray)",
+        "votingPhase": "Judgment Time",
+        "selectToEliminate": "Who deserves to go?",
+        "confirmElimination": "Are you sure you want to kick them?",
+        "eliminatePlayer": "Bye bye {{name}}?",
+        "cancel": "Mercy!",
+        "confirm": "Get Out!",
+        "mrWhiteFound": "Mr. White Busted!",
+        "mrWhiteGuessPrompt": "You're toast! Last chance: guess the Civilian word to steal the win.",
+        "enterWordPlaceholder": "Take a wild guess...",
+        "submitGuess": "Final Answer"
     },
     "results": {
-        "title": "Game Over",
-        "civiliansWin": "Civilians Win!",
-        "undercoversWin": "Undercovers Win!",
-        "mrWhiteWins": "Mr. White Wins!",
-        "civilianWord": "Civilian word",
-        "undercoverWord": "Undercover word",
-        "playAgain": "Play Again",
-        "backToHome": "Back to Home",
-        "roles": "Player Roles"
+        "title": "Final Verdict",
+        "civiliansWin": "Civilians Survived!",
+        "undercoversWin": "Undercovers Fooled You!",
+        "mrWhiteWins": "Mr. White Stole It!",
+        "civilianWord": "The real word was",
+        "undercoverWord": "The impostor word",
+        "playAgain": "Another Round?",
+        "backToHome": "Flee to Home",
+        "roles": "Masks Off"
+    },
+    "multiplayer": {
+        "title": "Multiplayer HQ",
+        "leaveRoom": "Desert",
+        "lobby": "Waiting Room",
+        "roomCode": "Secret Code",
+        "shareCode": "Give this to your accomplices",
+        "players": "Accomplices",
+        "host": "BOSS",
+        "you": "(You)",
+        "waitingForHost": "Boss is taking their time...",
+        "joinOrCreate": "Join or Create",
+        "enterName": "Your alias",
+        "nickname": "Handle",
+        "yourName": "What do we call you?",
+        "createRoom": "Build a Lair",
+        "joinRoom": "Infiltrate Room",
+        "joinGame": "Crash In",
+        "cancel": "Nevermind",
+        "enterCode": "Room Code",
+        "errorCreate": "Can't create room. Server grumpy?",
+        "errorJoin": "Can't get in. Wrong code?"
     },
     "common": {
         "back": "Back",
-        "continue": "Continue",
-        "loading": "Loading...",
-        "error": "Something went wrong"
+        "continue": "Next",
+        "loading": "Loading the plot...",
+        "error": "Oops, everything exploded"
     },
     "roles": {
-        "civilian": "Civilian",
-        "undercover": "Undercover",
-        "mrWhite": "Mr. White",
-        "unknown": "Unknown"
+        "civilian": "Civilian (Innocent)",
+        "undercover": "Undercover (Liar)",
+        "mrWhite": "Mr. White (Impostor)",
+        "unknown": "???"
     }
 }
