--- a/client/src/i18n/locales/fr.json
+++ b/client/src/i18n/locales/fr.json
@@ -3,79 +3,101 @@
         "title": "UNDERCOVER"
     },
     "home": {
-        "subtitle": "Le jeu de déduction sociale ultime",
+        "subtitle": "Le jeu où vos amis deviennent vos pires ennemis",
         "newGame": "Jouer",
         "playOnline": "Multijoueur",
-        "howToPlay": "Comment jouer"
+        "howToPlay": "Règles (pour les nuls)"
     },
     "setup": {
-        "title": "Configuration",
-        "players": "Joueurs",
-        "addPlayer": "Ajouter un joueur",
-        "playerName": "Nom du joueur",
-        "minPlayers": "Minimum {{count}} joueurs requis",
-        "settings": "Paramètres",
-        "undercoverCount": "Agents infiltrés",
-        "mrWhiteCount": "Mr. White",
-        "startGame": "Démarrer",
-        "removePlayer": "Retirer le joueur",
-        "duplicateName": "Ce nom est déjà pris !"
+        "title": "Préparation du crime",
+        "players": "Participants",
+        "addPlayer": "Ajouter une victime",
+        "playerName": "Nom de code",
+        "minPlayers": "Il faut au moins {{count}} joueurs pour s'amuser",
+        "settings": "Complot",
+        "undercoverCount": "Nombre d'imposteurs",
+        "mrWhiteCount": "Nombre de Mr. White",
+        "startGame": "Que la trahison commence !",
+        "removePlayer": "Virer ce joueur",
+        "duplicateName": "Original... mais déjà pris !"
     },
     "players": {
-        "title": "Joueurs",
-        "ready": "{{count}} joueurs prêts"
+        "title": "Les Suspects",
+        "ready": "{{count}} menteurs prêts"
     },
     "reveal": {
-        "passPhone": "Passez l'appareil à",
+        "passPhone": "Passez le téléphone à",
         "iam": "Je suis",
-        "yourWord": "Votre mot",
-        "youAreMrWhite": "Mr. White",
-        "mrWhiteHint": "Vous ne connaissez pas le mot. Écoutez les autres pour deviner !",
-        "memorize": "Décrivez ce mot sans le dire directement",
-        "nextPlayer": "Joueur suivant",
-        "startDiscussion": "Lancer la partie",
-        "getReady": "Préparez-vous !",
-        "yourRole": "Votre rôle",
-        "identify": "Touchez pour révéler"
+        "yourWord": "Ton mot secret",
+        "youAreMrWhite": "T'es Mr. White !",
+        "mrWhiteHint": "T'as aucune idée du mot. Ments comme un arracheur de dents !",
+        "memorize": "Mémorise ça et ne te fais pas griller",
+        "nextPlayer": "Au suivant !",
+        "startDiscussion": "Place au débat",
+        "getReady": "Chut !",
+        "yourRole": "Ton identité",
+        "identify": "Touche pour voir ton destin"
     },
     "game": {
-        "title": "Discussion",
+        "title": "Débat Houleux",
         "round": "Manche {{round}}",
-        "playersRemaining": "{{count}} joueurs restants",
-        "eliminated": "Éliminé",
-        "vote": "Voter",
-        "votingPhase": "Phase de Vote",
-        "selectToEliminate": "Sélectionnez un joueur à éliminer",
-        "confirmElimination": "Confirmer l'élimination",
-        "eliminatePlayer": "Éliminer {{name}} ?",
-        "cancel": "Annuler",
-        "confirm": "Confirmer",
-        "mrWhiteFound": "Mr. White Démasqué !",
-        "mrWhiteGuessPrompt": "Vous avez été découvert ! Il vous reste une chance : devinez le mot des civils pour gagner instantanément.",
-        "enterWordPlaceholder": "Entrez le mot des civils",
-        "submitGuess": "Tenter ma chance"
+        "playersRemaining": "{{count}} survivants",
+        "eliminated": "Liquidés",
+        "vote": "Voter (Trahir)",
+        "votingPhase": "L'heure du Jugement",
+        "selectToEliminate": "Qui mérite de sortir ?",
+        "confirmElimination": "T'es sûr de vouloir virer ce type ?",
+        "eliminatePlayer": "Adieu {{name}} ?",
+        "cancel": "Pitié, non",
+        "confirm": "Dehors !",
+        "mrWhiteFound": "Mr. White s'est fait pecho !",
+        "mrWhiteGuessPrompt": "T'es cramé ! Dernière chance : devine le mot des Civils pour voler la victoire.",
+        "enterWordPlaceholder": "Tente un truc...",
+        "submitGuess": "C'est mon dernier mot"
     },
     "results": {
-        "title": "Fin de Partie",
-        "civiliansWin": "Les Civils Gagnent !",
-        "undercoversWin": "Les Infiltrés Gagnent !",
-        "mrWhiteWins": "Mr. White Gagne !",
-        "civilianWord": "Mot des civils",
-        "undercoverWord": "Mot des infiltrés",
-        "playAgain": "Rejouer",
-        "backToHome": "Retour à l'Accueil",
-        "roles": "Rôles des Joueurs"
+        "title": "Verdict Final",
+        "civiliansWin": "Les Civils ont survécu !",
+        "undercoversWin": "Les Infiltrés vous ont bien eus !",
+        "mrWhiteWins": "Mr. White a tout braqué !",
+        "civilianWord": "Le vrai mot était",
+        "undercoverWord": "Le mot des imposteurs",
+        "playAgain": "On remet ça ?",
+        "backToHome": "Fuir à l'accueil",
+        "roles": "Les masques tombent"
+    },
+    "multiplayer": {
+        "title": "QG Multijoueur",
+        "leaveRoom": "Déserter",
+        "lobby": "Salle d'attente",
+        "roomCode": "Code Secret",
+        "shareCode": "Donne ça à tes potes",
+        "players": "Complices",
+        "host": "CHEF",
+        "you": "(Toi)",
+        "waitingForHost": "Le chef prend son temps...",
+        "joinOrCreate": "Rejoindre ou Créer",
+        "enterName": "Ton petit nom",
+        "nickname": "Blase",
+        "yourName": "Comment on t'appelle ?",
+        "createRoom": "Créer un repaire",
+        "joinRoom": "Infiltrer un salon",
+        "joinGame": "S'incruster",
+        "cancel": "Laisse tomber",
+        "enterCode": "Code du salon",
+        "errorCreate": "Impossible de créer le salon. Le serveur fait la gueule ?",
+        "errorJoin": "Impossible d'entrer. T'es sûr du code ?"
     },
     "common": {
         "back": "Retour",
-        "continue": "Continuer",
-        "loading": "Chargement...",
-        "error": "Une erreur est survenue"
+        "continue": "Suivant",
+        "loading": "Chargement du complot...",
+        "error": "Oups, tout a pété"
     },
     "roles": {
-        "civilian": "Civil",
-        "undercover": "Infiltré",
-        "mrWhite": "Mr. White",
-        "unknown": "Inconnu"
+        "civilian": "Civil (L'innocent)",
+        "undercover": "Infiltré (Le menteur)",
+        "mrWhite": "Mr. White (L'imposteur)",
+        "unknown": "???"
     }
 }
