feat: Introduce mobile tab bar for navigation, redesign homepage, and simplify multiplayer setup headers.

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -2,6 +2,11 @@
     "app": {
         "title": "UNDERCOVER"
     },
+    "nav": {
+        "home": "Home",
+        "play": "Play",
+        "multiplayer": "Multiplayer"
+    },
     "home": {
         "subtitle": "The game that ruins friendships",
         "newGame": "Play",
