--- a/client/src/i18n/locales/fr.json
+++ b/client/src/i18n/locales/fr.json
@@ -15,7 +15,7 @@
         "howToPlay": "Règles (pour les nuls)"
     },
     "setup": {
-        "title": "Préparation du crime",
+        "title": "Mise en place",
         "players": "Participants",
         "addPlayer": "Ajouter une victime",
         "playerName": "Nom de code",
@@ -69,7 +69,7 @@
     },
     "results": {
         "title": "Verdict Final",
-        "civiliansWin": "Les Civils ont survécu !",
+        "civiliansWin": "Les Civils gagnent !",
         "undercoversWin": "Les Infiltrés vous ont bien eus !",
         "mrWhiteWins": "Mr. White a tout braqué !",
         "civilianWord": "Le vrai mot était",
@@ -93,7 +93,7 @@
         "enterName": "Ton petit nom",
         "nickname": "Blase",
         "yourName": "Comment on t'appelle ?",
-        "createRoom": "Créer un repaire",
+        "createRoom": "Créer un salon",
         "joinRoom": "Infiltrer un salon",
         "joinGame": "S'incruster",
         "cancel": "Laisse tomber",
