feat: Add 'identity' translation for multiplayer and introduce navigation/state hooks to HomePage.

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -81,6 +81,7 @@
     },
     "multiplayer": {
         "title": "Multiplayer Lobby",
+        "identity": "Identity",
         "leaveRoom": "Desert",
         "lobby": "Waiting Room",
         "roomCode": "Secret Code",
