--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -9,7 +9,7 @@
         "settings": "Settings"
     },
     "home": {
-        "subtitle": "The game that ruins friendships",
+        "subtitle": "Welcome to Undercover, the ultimate social deduction game.\nYour goal? Unmask the impostors before they eliminate you.\n\nThe Roles:\n- Civilians: You all share the same secret word. Find out who has a different one!\n- Undercovers: You have a slightly different word. Bluff your way to survival.\n- Mr. White: You have NO word. Listen, deduce, and guess the Civilian word to steal the win.\n\nEach round, give a clue, debate, and vote to eliminate a suspect.\nTrust no one. Your friends might not be who you think they are...",
         "newGame": "Play",
         "playOnline": "Multiplayer",
         "howToPlay": "Rules (Concept)"
