refactor: simplify multiplayer title in French translation

--- a/client/src/i18n/locales/fr.json
+++ b/client/src/i18n/locales/fr.json
@@ -80,7 +80,7 @@
         "roles": "Les masques tombent"
     },
     "multiplayer": {
-        "title": "QG Multijoueur",
+        "title": "Multijoueur",
         "identity": "Identité",
         "leaveRoom": "Déserter",
         "lobby": "Salle d'attente",
